# cs

1_hello_world/: CMakeLists.txt  main.cpp
1_hello_world/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
2_gcc_demo_swap/: main.cpp  shared_main  simple_main
2_gcc_demo_swap/include/: person.h
2_gcc_demo_swap/simple_main.dSYM/Contents/: Info.plist
2_gcc_demo_swap/simple_main.dSYM/Contents/Resources/DWARF/: simple_main
2_gcc_demo_swap/src/: person.cpp
3_hello_vscode_demo/src/: swap2.cpp
4_cmake_build_direct/: CMakeLists.txt  main_cmake
5_cmake_build_static/: CMakeLists.txt
5_cmake_build_static/include/: swap2.h
6_cmake_build_shared/: CMakeLists.txt  main.cpp
6_cmake_build_shared/include/: swap3.h
6_cmake_build_shared/src/: swap3.cpp
7_cmake_build_sub_shared/: CMakeLists.txt  main.cpp
7_cmake_build_sub_shared/src/: CMakeLists.txt
